# YouTubeMonitor

./: .gitignore  ARCHITECTURE.md  GITHUB-ACTIONS-GUIDE.md  LICENSE  README.md  activation_guide.md  admin-keygen.js  next.config.js  package-lock.json  package.json  prepare_standalone.js  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240121000000_init.sql  20260121000001_add_channel_metrics.sql  20260122000000_add_concurrency.sql  20260122120000_add_activation_date.sql  20260122121000_add_license_days.sql  20260123000000_optimize_indexes.sql  20260124000000_add_download_tracking.sql  20260124170000_perf_indexes.sql  20260130000000_add_api_key_status.sql
src-tauri/permissions/autogenerated/: activate_software.toml  add_api_key.toml  add_channels.toml  cancel_add_channels.toml  check_cookie_status.toml  clear_all_data.toml  clear_download_history.toml  create_group.toml  delete_channel.toml  delete_group.toml  download_video.toml  export_backup.toml  export_backup_to_file.toml  get_api_keys.toml  get_channel_details.toml  get_channel_stats.toml  get_channels.toml  get_group_stats.toml  get_machine_id.toml  get_video.toml  get_videos.toml  get_viral_videos.toml  import_backup.toml  migrate_files.toml  move_channel.toml  open_video_folder.toml  recalculate_all_stats.toml  refresh_all_channels.toml  refresh_channel.toml  refresh_cookies.toml  resolve_video_info.toml  (+5 more)
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  path_utils.rs  youtube_api.rs
(+83 files in other folders)
